/*
 * Copyright (C) 2011 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */


allprojects {
    group 'org.ros.rosjava_core'
    version = '0.3.9.2'
}

subprojects {
    if (name != 'docs') {
        apply plugin: 'java'
        apply plugin: "idea"


        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17


        repositories {
            mavenLocal()
            mavenCentral()

            maven {
                url "https://github.com/SpyrosKou/rosjava_mvn_repo/raw/noetic"
                name "GithubSpyrosKouRepository"
            }


        }

    }

    defaultTasks 'publish', 'installDist'
}